--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@
 .hero-container .sofa-left{
   width: 10%;
   height: 100%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
+  background: #FFFFFF;
+  box-shadow: 3px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.153573); */
 }
 .hero-container .sofa-left{
   display: flex;
@@ -39,9 +42,10 @@
 .hero-container .sofa-middle{
   width: 15%;
   height: 100%;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 .sofa-middle .sofa-middleheading{
+  padding-left: 10px;
   margin-top: 1rem; 
   font-size: 25px;
   font-weight: 700;
@@ -52,25 +56,39 @@
 }
 .hero-container .sofa-right{
   width: 75%;
-  height: 90%;
+  height: 100%;
   border: 2px solid black;
+
+}
+.hero-container .sofa-right .sofa-rightbg {
+  width: 100%;
+  height: 90%;
+  border: 2px solid red;
   background: url('./img/img1.png') no-repeat center center/cover;
 }
-.hero-container .sofa-right ul{
+.hero-container .sofa-rightbg ul{
   display: flex;
   justify-content: right;
-  /* align-items: center; */
 }
-.hero-container .sofa-right ul li{
+.hero-container .sofa-rightbg ul li{
   list-style: none;
   background-color: #fff;
   padding: 10px;
 }
-.sofa-right ul li a{
+.sofa-rightbg ul li a{
   text-decoration: none;
   color: #000;
   font-size: 15px;
   font-weight: 600;
+}
+.sofa-right .sofa-button{
+  display: flex;
+  justify-content: right;
+  /* align-items: end; */
+}
+.sofa-right .sofa-button i{
+  padding: 20px;
+  font-size: 25px;
 }
 .sofa-right .sofa-textbox{
   position: absolute;
