--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
   /* border: 2px solid green; */
   background: #FFFFFF;
   box-shadow: 3px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  /* box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.153573); */
 }
 .hero-container .sofa-left{
   display: flex;
@@ -100,4 +99,45 @@
   font-weight: 700;
   font-family: 'Roboto Slab', serif;
   line-height: 50px;
+}
+
+
+/* =================sofa placecard================== */
+.sofa-placecard-container{
+  display: flex;
+  position: relative;
+  width: 55%;
+}
+.sofa-placecard{
+  position: absolute;
+  left: 30%;
+  bottom: 30%;
+  background-color: #fff;
+  padding: 35px;
+  border-left: 10px solid #E48A00;
+}
+.sofa-placecard h3{
+  color: #8B8B8B;
+  font-size: 15px;
+}
+.sofa-placecard p{
+  margin-bottom: 10px;
+  color: #91949A;
+}
+.sofa-placecard h1{
+  font-size: 25px;
+  font-weight: 600;
+  font-family: 'Roboto Slab', serif;
+}
+.sofa-placecard a{
+  text-decoration: none;
+  background-color: #000;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: 'Roboto Slab', serif;
+  padding: 5px 10px;
+  position: absolute;
+  right: 30px;
+  bottom: 5px;
 }
