--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
 .hero-container .sofa-rightbg ul li{
   list-style: none;
   background-color: #fff;
-  padding: 10px;
+  padding: 15px 10px;
 }
 .sofa-rightbg ul li a{
   text-decoration: none;
@@ -80,10 +80,21 @@
   font-size: 15px;
   font-weight: 600;
 }
+.sofa-rightbg .sofa-rightnum{
+  position: absolute;
+  right: 2%;
+  bottom: 7%;
+  border: 2px solid red;
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 100px;
+  color: rgba(255, 255, 255, 0.314194);
+
+}
 .sofa-right .sofa-button{
   display: flex;
   justify-content: right;
-  /* align-items: end; */
 }
 .sofa-right .sofa-button i{
   padding: 20px;
