--- a/style.css
+++ b/style.css
@@ -209,10 +209,10 @@
   text-decoration: none;
   background-color: #000;
   color: #fff;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight:400;
   font-family: 'Roboto Slab', serif;
-  padding: 5px 10px;
+  padding: 5px;
   position: absolute;
   right: 30px;
   bottom: 5px;
